--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -23,6 +23,7 @@ disabled_rules:
   - trailing_comma
   - type_body_length
   - opening_brace
+  - untyped_error_in_catch
 
 opt_in_rules:
   - array_init
